fix: update sq settings

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,1 @@
-sonar.projectKey=HomeAssistant-Monzo
+sonar.projectKey=sonar.projectKey=scottjones4k_homeassistant-monzo_31d1a4a7-0e67-409f-8566-9fbbea7aafcb
